# openclaw-voice-control

./: .gitignore  AGENTS.md  README.md  SKILL.md  TAILSCALE-SETUP.md  TAILSCALE-WINDOWS-SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
src/client/: index.html
src/server/: backend.py  main.py  tts.py  vad.py
tests/: test_modules.py
