[project]
name = "openclaw-voice-control"
version = "0.1.0"
description = "Self-hosted browser-based voice interface for AI assistants"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Cnid"}
]
keywords = ["voice", "ai", "assistant", "whisper", "tts", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "openai>=1.6.0",
    "httpx>=0.26.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "elevenlabs>=1.0.0",
]

[project.optional-dependencies]
stt = [
    "faster-whisper>=1.0.0",
    "openai-whisper>=20231117",
]
tts = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
]
audio = [
    "noisereduce>=3.0.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.1",
    "webrtcvad>=2.0.10",
]
vad = [
    "torch>=2.1.0",
]
all = [
    "openclaw-voice-control[stt,tts,audio,vad]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]



[project.urls]
Homepage = "https://github.com/OpenCnid/openclaw-voice-control"
Repository = "https://github.com/OpenCnid/openclaw-voice-control"
Issues = "https://github.com/OpenCnid/openclaw-voice-control/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
